# llvm-bw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  llvm-bw.sln
chklib/: CMakeLists.txt  Logger.h  MappingCore.h
docs/: bitmasking.md
llvm-bw/: BWMap.cpp  BWMap.h  CMakeLists.txt  ExtTriggerAction.h  IRConverter.cpp  IRConverter.h  IRLowering.cpp  IRLowering.h  IRReader.cpp  IRReader.h  TriggerApp.cpp  TriggerApp.h  TriggerBlock.cpp  TriggerBlock.h  TriggerLowering.h  Util.h  llvm-bw.cpp
llvm-bw/BW/: Offsets.cpp  Offsets.h  offsets.csv
llvm-bw/Exceptions/: InvalidArgumentException.h  MissingIdException.h  NameConflictException.h  UnsupportedException.h
llvm-bw/TriggerIR/: Add.cpp  Allocate.cpp  Allocate.h  AppInit.cpp  Assign.cpp  BitwiseAnd.cpp  BitwiseNot.cpp  BitwiseOr.cpp  BitwiseXor.cpp  Block.cpp  Block.h  ConstPtr.cpp  ConstPtr.h  Constant.cpp  Epilogue.cpp  Function.cpp  Function.h  Negate.cpp  NextPtr.cpp  Program.cpp  Program.h  Ptr.cpp  Ptr.h  RefConst.cpp  Retn.cpp  Retn.h  Shl.cpp  Shr.cpp  StackAlloc.cpp  Subtract.cpp  TrigInst.cpp  TrigInst.h  Variable.cpp
llvm-bw/TriggerTypes/: DecoratedTrigger.cpp  DecoratedTrigger.h  FastVar.h  FastVarReadOnly.h  FastVarWriteOnly.h  TrigMemBlock.cpp  TrigMemBlock.h  TriggerGenerator.cpp  TriggerGenerator.h
test/: run_test.bat  test.cpp  test.ll  test.scm
test/include/: builtins.h
util/: README.md  trig_bitcheck.cpp
